<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
        android:background="@android:color/holo_blue_light"
    tools:context="com.example.lab2.myapplication.LoginActivity"
    android:weightSum="1">
    <TextView

        android:layout_marginTop="90dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/H_Email"/>
        <EditText
        android:id="@+id/ed_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Edit_text1"
        android:textColor="@android:color/white"
        />

    <TextView

        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/H_Email"
        />
    <EditText

        android:id="@+id/ed_login_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/Edit_text2"
    android:textColor="@android:color/white"
    />
    <Button
        android:layout_marginTop="10dp"
    android:layout_width="230dp"
    android:layout_height="wrap_content"
    android:text="@string/f_your_pass"
    android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_marginTop="40dp"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:onClick="doLogin"/>


</LinearLayout>
